# DVA500-WebCrawler

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile.client  Dockerfile.server  LICENSE  Makefile  README.md  client.py  crawler.cfg  docker-compose.yml  pyproject.toml  ruff.toml  server.py
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/webcrawler/: client.html  server.html
docs/_sources/: index.rst.txt
docs/source/: conf.py  index.rst  modules.rst
docs/tutorials/: tutorial.md
html/: index.html  page_1.html  page_10.html  page_100.html  page_1000.html  page_1001.html  page_1002.html  page_1003.html  page_1004.html  page_1005.html  page_1006.html  page_1007.html  page_1008.html  page_1009.html  page_101.html  page_1010.html  page_1011.html  page_1012.html  page_1013.html  page_1014.html  page_1015.html  page_1016.html  page_1017.html  page_1018.html  page_1019.html  page_102.html  page_1020.html  page_1021.html  page_1022.html  page_1023.html  page_1024.html  page_1025.html  page_1026.html  page_1027.html  page_1028.html  page_1029.html  page_103.html  page_1030.html  page_1031.html  page_1032.html  (+2456 more)
tests/: test_client_retry.py  test_client_visited.py
webcrawler/: client.py  server.py
