[tool.poetry]
name = "dva500-webcrawler"
version = "1.0.0"
description = "A containerized web crawler that explores the internet, fetching and linking HTML pages."
authors = ["Erdem Önal <erdemonal11@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "webcrawler"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"

[tool.poetry.scripts]
webcrawler-client = "webcrawler.client:main"
webcrawler-server = "webcrawler.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"