[project]
name = "dva500-webcrawler"
version = "1.0.0"
description = "A containerized web crawler that explores the internet, fetching and linking HTML pages."
readme = "README.md"
license = "MIT"
authors = [{ name = "Erdem Önal", email = "erdemonal11@outlook.com" }]
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0,<3.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
]

[tool.poetry]
packages = [{include = "webcrawler"}]

[project.scripts]
webcrawler-client = "webcrawler.client:main"
webcrawler-server = "webcrawler.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.3,<0.15.0"
black = ">=25.9.0,<26.0.0"
pytest = ">=8.4.2,<9.0.0"
pytest-mock = ">=3.15.1,<4.0.0"
pre-commit = ">=4.3.0,<5.0.0"
